[package]
name = "pboutput"
version = "0.0.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg15"]
pg11 = ["pgx/pg11", "pgx-tests/pg11"]
pg12 = ["pgx/pg12", "pgx-tests/pg12"]
pg13 = ["pgx/pg13", "pgx-tests/pg13"]
pg14 = ["pgx/pg14", "pgx-tests/pg14"]
pg15 = ["pgx/pg15", "pgx-tests/pg15"]

pg_test = []

[dependencies]
pgx = "=0.6.1"
prost = "0.11.3"

[build-dependencies]
prost-build = "0.11.4"

[dev-dependencies]
pgx-tests = "=0.6.1"

